# kota

./: .gitignore  404.html  AGENTS.md  Cargo.toml  README.md  add_two_numbers.go  audit.toml  book.toml  boston_mcp.py  generate_table.py  getting-started.html  index.html  mcp_config.json  memory.html  notebooks.html  output.md  print.html  ruff.toml  searchindex.js  searchindex.json  skills.html  test_tui_md.rs
.githooks/: commit-msg  pre-commit
.github/workflows/: agent-docs-sync.yml  ci.yml  deploy-docs.yml  pr-title.yml
.kota_knowledge/: index.md  log.md
.kota_skills/: architect.md  base.md  coder.md  cpe.md  eval.md  librarian.md  research.md
docs/: SUMMARY.md  getting-started.md  introduction.md  memory.md  notebooks.md  skills.md
go/: coordinator.go  go.mod  search_wiki.go  watchdog.go
go/search_wiki/: search_wiki_test.go
go/watchdog/: watchdog_test.go
meta_search/: claude_wrapper.py  forest_dew_benchmark.py  kota_domain.py  meta_harness.py  run_eval.sh
meta_search/logs/: evolution_summary.jsonl
notebooks/: L1_Kota_Architecture.ipynb  L2_Memory_and_Turso.ipynb  L3_Agent_Skills_and_HITL.ipynb  L4_Observability_and_Metrics.ipynb  L5_Cognitive_Sensing.ipynb  L6_Quality_Workflows.ipynb  Pipfile  requirements.txt
scripts/: generate_agent_docs.py
src/: agent.rs  events.rs  index.html  llm.rs  main.rs  mcp.rs  memory.rs  power.rs  sensing.rs  server.rs  skills.rs  telemetry.rs  tools.rs  tui.rs  vertex.rs
